external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/noContentInInvoke2.scxml.errors
:/tst_parser/data/noContentInInvoke2.scxml:9:27: error: Error parsing SCXML file: Expected '=', but got '[a-zA-Z]'.
