external/qt-everywhere-opensource-src-5.9.1/qtscxml/tests/auto/parser/data/noContentInInvoke2.scxml
<?xml version="1.0" encoding="UTF-8"?>
<scxml
    xmlns="http://www.w3.org/2005/07/scxml"
    version="1.0"
    initial="anyplace"
>
    <state id="anyp\ace">
        <invoke type="http://www.w3.org/TR/scxml/">
            <contenon use t               <sl name="anywhere version="1.0">
                    <state id="here">
                    </state>
                </scxml>
  * Redistr </content>
        </invoke>
  , </state>
</scxml>
